--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 
         function playCelebrationSound() {
             const soundUrl1 = "brass-horn-fanfare-charge-epic-stock-media-1-00-03.mp3";
-            const soundUrl2 = "my_voice.m4a";
+            const soundUrl2 = "my_voice.mp3";
             const audioObj1 = new Audio(soundUrl1);
             audioObj1.volume = 0.6;
             const playPromise = audioObj1.play();
@@ -663,7 +663,46 @@
             let msg = `You are Ranked #${rank}!`;
             let iconStyle = 'text-7xl sm:text-9xl mb-6 sm:mb-8 animate-bounce drop-shadow-[0_0_35px_rgba(234,179,8,0.6)] filter brightness-110 saturate-125 contrast-125';
 
-            if (rank === 2) {
+            if (rank === 'keep-going') {
+                // Keep Going Settings (Score >= 90%)
+                isSvg = true;
+                titleGradient = 'from-emerald-400 via-green-500 to-teal-600';
+                glowColor = 'bg-emerald-500';
+                btnGradient = 'from-emerald-500 to-teal-700 border-teal-900';
+                ringColor = 'focus:ring-emerald-500';
+                msg = `Excellent Performance!`;
+                
+                // SVG for Keep Going Badge (Green Theme)
+                iconContent = `
+                <svg width="100%" height="100%" viewBox="0 0 500 500" class="w-32 h-32 sm:w-48 sm:h-48 mx-auto mb-6 animate-bounce drop-shadow-2xl filter saturate-125">
+                  <defs>
+                    <linearGradient id="greenGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                      <stop offset="0%" style="stop-color:#34D399;stop-opacity:1" />
+                      <stop offset="50%" style="stop-color:#10B981;stop-opacity:1" />
+                      <stop offset="100%" style="stop-color:#047857;stop-opacity:1" />
+                    </linearGradient>
+                    <filter id="badgeShadowKG" x="-20%" y="-20%" width="140%" height="140%">
+                      <feDropShadow dx="2" dy="4" stdDeviation="3" flood-color="rgba(0,0,0,0.4)"/>
+                    </filter>
+                  </defs>
+                  <!-- Circle Border -->
+                  <circle cx="250" cy="250" r="230" fill="none" stroke="url(#greenGradient)" stroke-width="15" filter="url(#badgeShadowKG)" />
+                  <circle cx="250" cy="250" r="215" fill="none" stroke="#064E3B" stroke-width="2" opacity="0.3" />
+                  
+                  <!-- Star Icon in Center -->
+                  <g transform="translate(250, 160) scale(3)">
+                     <path d="M0 -25 L6 -8 L24 -8 L10 4 L15 22 L0 12 L-15 22 L-10 4 L-24 -8 L-6 -8 Z" fill="url(#greenGradient)" stroke="#065F46" stroke-width="1" />
+                  </g>
+
+                  <!-- Text -->
+                  <g transform="translate(250, 360)" text-anchor="middle" filter="url(#badgeShadowKG)">
+                    <text y="-20" font-family="serif" font-weight="900" font-size="90" fill="url(#greenGradient)" stroke="#064E3B" stroke-width="1.5">KEEP</text>
+                    <text y="70" font-family="serif" font-weight="bold" font-size="70" letter-spacing="4" fill="url(#greenGradient)" stroke="#064E3B" stroke-width="0.5">GOING</text>
+                  </g>
+                </svg>
+                `;
+
+            } else if (rank === 2) {
                 iconContent = '🥈';
                 titleGradient = 'from-[#E8E8E8] via-[#BCC6CC] to-[#757575]';
                 glowColor = 'bg-[#C0C0C0]';
@@ -961,8 +1000,16 @@
             const rank = caStudent ? (caStudent['Rank'] || 'N/A') : 'N/A';
             const rankNum = parseInt(rank);
 
+            // Celebration Logic
             if (!isNaN(rankNum) && rankNum >= 1 && rankNum <= 10) {
+                // Top 10
                 updateCongratsModal(rankNum);
+                fireConfetti();
+                playCelebrationSound();
+                showCongratsModal();
+            } else if (calculatedTotal >= 63) { 
+                // Keep Going (Score >= 90% i.e., 63/70) AND not in Top 10
+                updateCongratsModal('keep-going');
                 fireConfetti();
                 playCelebrationSound();
                 showCongratsModal();
